@@ -1,3 +1,12 @@
+2006-03-01  Michael Wybrow  <mjwybrow@users.sourceforge.net>
+
+	* src/conn-avoid-ref.cpp, src/libavoid/connector.h,
+	  src/libavoid/shape.cpp, src/libavoid/graph.cpp, src/libavoid/shape.h,
+	  src/libavoid/graph.h, src/libavoid/router.cpp, src/libavoid/router.h,
+	  src/libavoid/connector.cpp, src/libavoid/debug.h:
+
+	  Some speed improvements and interface cleanups to libavoid.
+
 2006-02-28  Jon A. Cruz  <jon@joncruz.org>
 	* src/dialogs/swatches.cpp:
 
